--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jquery": "^3.5.32",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
@@ -25,7 +26,9 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "framer-motion": "^11.15.0",
     "globals": "^15.14.0",
+    "lucide-react": "^0.474.0",
     "postcss": "^8.4.49",
+    "react-router-dom": "^7.1.3",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
